--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -76,11 +76,11 @@ body.dark {
   --featured-bg: #66578d;
   --featured-text: #fff;
   --secondary-color: #66578d;
-  --background: #312F2F;
+  --background: #1f1f1f;
   --text-color: rgba(255,255,255,0.88);
   --text-secondary-color: rgba(255,255,255,0.66);
   --site-header: var(--background);
-  --card-bg: #1f1f1f;
+  --card-bg: #292929;
   --card-bdr: #FAF3DD;
   --card-shadow: #141414;
   --btn-bg: var(--background);
@@ -289,6 +289,10 @@ a {
   .post-link {
     color: var(--text-color);
     text-decoration: none;
+  }
+  .post-author {
+    font-weight: 300;
+    margin-bottom: 0;
   }
 }
 .post-meta {
